[project]
name = "pyenvquick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
repl = [
    "ipython>=9.7.0",
    "pdbpp>=0.11.7",
]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
datasci = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
hacking = [
    "pwntools>=4.15.0",
    "scapy>=2.6.1",
]
tools = [
    "click>=8.3.1",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]
